--- a/controller-module/build.gradle
+++ b/controller-module/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.0-SNAPSHOT'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id 'java'
-	id 'application'
+    id 'org.springframework.boot' version '2.4.0-SNAPSHOT'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'java'
+    id 'application'
 }
 
 group = 'com.gmail.roadtojob2019'
@@ -10,18 +10,19 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '15'
 
 repositories {
-	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
-	maven { url 'https://repo.spring.io/snapshot' }
+    mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation project(':service-module')
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
 
-mainClassName='com.gmail.roadtojob2019.controller.OnlineStoreApplication'
+mainClassName = 'com.gmail.roadtojob2019.controller.OnlineStoreApplication'
