--- a/configuration/build.gradle
+++ b/configuration/build.gradle
@@ -1,5 +1,12 @@
+plugins {
+    id 'org.springframework.boot' version '2.4.0-SNAPSHOT'
+}
+
 dependencies {
+    implementation project(':controller-module')
     implementation project(':service-module')
+    implementation project(':repository-module')
+
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
