--- a/repository-module/build.gradle
+++ b/repository-module/build.gradle
@@ -1,7 +1,3 @@
-plugins {
-	id 'java'
+dependencies {
+    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
-
-group = 'com.gmail.roadtojob2019'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '15'
