--- a/controller-module/build.gradle
+++ b/controller-module/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     implementation project(':service-module')
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'com.h2database:h2'
 }
 
 test {
