--- a/controller-module/build.gradle
+++ b/controller-module/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation project(':service-module')
 
     testImplementation project(':repository-module')
+    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 test {
