--- a/controller-module/build.gradle
+++ b/controller-module/build.gradle
@@ -10,6 +10,8 @@ dependencies {
 
     testImplementation project(':repository-module')
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
