--- a/service-module/build.gradle
+++ b/service-module/build.gradle
@@ -1,3 +1,12 @@
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation project(':repository-module')
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    implementation 'org.mapstruct:mapstruct:1.4.1.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
 }
