--- a/controller-module/build.gradle
+++ b/controller-module/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
 test {
