--- a/configuration/build.gradle
+++ b/configuration/build.gradle
@@ -6,6 +6,7 @@ sourceCompatibility = '15'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation project(':controller-module')
