--- a/configuration/build.gradle
+++ b/configuration/build.gradle
@@ -7,6 +7,7 @@ sourceCompatibility = '15'
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.liquibase:liquibase-core'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation project(':controller-module')
