--- a/configuration/src/main/resources/application.properties
+++ b/configuration/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.datasource.url=jdbc:h2:mem:store;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.jpa.hibernate.ddl-auto=none
 
+spring.liquibase.change-log=classpath:liquibase/changelog.yaml
+liquibase.enabled=true
+liquibase.url=jdbc:h2:mem:store
+liquibase.user=sa
+liquibase.password=
