Create class RandomPasswordGeneratorImpl

--- a/service-module/build.gradle
+++ b/service-module/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.4.1.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
 
+    implementation 'org.passay:passay:1.6.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.hamcrest:hamcrest:2.2'
 }
