--- a/configuration/src/main/resources/application.properties
+++ b/configuration/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:h2:mem:store;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -7,10 +8,20 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
 
+##Liquibase properties
 spring.liquibase.change-log=classpath:liquibase/changelog.yaml
 liquibase.enabled=true
 liquibase.url=jdbc:h2:mem:store
 liquibase.user=sa
 liquibase.password=
+
+##MailSender properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=RoadToJob2019MailSender@gmail.com
+spring.mail.password=rdsxywklxfjyfsva
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
