--- a/controller-module/src/test/resources/application-test.properties
+++ b/controller-module/src/test/resources/application-test.properties
@@ -7,3 +7,11 @@ hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.hbm2ddl.auto=create
 
 spring.h2.console.enabled=true
+
+##MailSender properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=RoadToJob2019MailSender@gmail.com
+spring.mail.password=rdsxywklxfjyfsva
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
