--- a/service-module/build.gradle
+++ b/service-module/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
 
     implementation 'org.passay:passay:1.6.0'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.hamcrest:hamcrest:2.2'
