--- a/service-module/build.gradle
+++ b/service-module/build.gradle
@@ -1,15 +1,12 @@
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
     implementation project(':repository-module')
-
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
+    implementation('org.springframework.boot:spring-boot-starter-validation')
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
     implementation 'org.mapstruct:mapstruct:1.4.1.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
-
     implementation 'org.passay:passay:1.6.0'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
