--- a/configuration/src/main/resources/application.properties
+++ b/configuration/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=none
 
 ##Liquibase properties
-spring.liquibase.change-log=classpath:liquibase/changelog.yaml
+spring.liquibase.change-log=classpath:liquibase/master-changelog.yaml
 liquibase.enabled=true
 liquibase.url=jdbc:h2:mem:store
 liquibase.user=sa
