--- a/configuration/src/main/resources/liquibase/changelog/user-changelog.yaml
+++ b/configuration/src/main/resources/liquibase/changelog/user-changelog.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
 
   - changeSet:
-      id: CREATE_TABLE-1
+      id: CREATE-TABLE-USERS
       author: RoadToJob2019@gmail.com
       changes:
         - createTable:
@@ -56,7 +56,7 @@ databaseChangeLog:
                     nullable: false
 
   - changeSet:
-      id: FILL_TABLE-1
+      id: FILL-TABLE-USERS
       author: RoadToJob2019@gmail.com
       changes:
         - insert:
