--- a/controller-module/build.gradle
+++ b/controller-module/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     testImplementation project(':repository-module')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    testImplementation 'org.liquibase:liquibase-core'
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
     compileOnly 'org.projectlombok:lombok'
