--- a/controller-module/src/test/resources/application-test.properties
+++ b/controller-module/src/test/resources/application-test.properties
@@ -1,12 +1,22 @@
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=test
-spring.datasource.password=test
-
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=none
+
+##Liquibase properties
+spring.liquibase.change-log=classpath:liquibase/master-changelog.yaml
+liquibase.enabled=true
+liquibase.url=jdbc:h2:mem:test
+liquibase.user=sa
+liquibase.password=
 
 ##MailSender properties
 spring.mail.host=smtp.gmail.com
@@ -15,4 +25,3 @@ spring.mail.username=RoadToJob2019MailSender@gmail.com
 spring.mail.password=rdsxywklxfjyfsva
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
