Create intgration method getArticleByIdWithCommentsSortedByDateDescTest

--- a/controller-module/src/test/resources/liquibase/master-changelog.yaml
+++ b/controller-module/src/test/resources/liquibase/master-changelog.yaml
@@ -9,3 +9,7 @@ databaseChangeLog:
   - include:
       file: liquibase/changelog/article-changelog.yaml
 
+  - include:
+      file: liquibase/changelog/comment-changelog.yaml
+
+
