--- a/controller-module/build.gradle
+++ b/controller-module/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.liquibase:liquibase-core'
     testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
