Create and fill item-changelog.yaml

--- a/configuration/src/main/resources/liquibase/master-changelog.yaml
+++ b/configuration/src/main/resources/liquibase/master-changelog.yaml
@@ -12,3 +12,6 @@ databaseChangeLog:
   - include:
       file: liquibase/changelog/comment-changelog.yaml
 
+  - include:
+      file: liquibase/changelog/item-changelog.yaml
+
